--- a/lichess-bot-master/config.yml
+++ b/lichess-bot-master/config.yml
@@ -4,16 +4,18 @@ url: "https://lichess.org/"  # lichess base URL
 engine:                      # engine settings
   dir: "./engines/"          # dir containing engines, relative to this project
   #name: "stockfish.exe"        # binary name of the engine to use
-  name: "sf_haswell.exe"     #haswell???
+  #name: "sf_haswell.exe"     #haswell???
+  #name: "bf.exe"     #brainfish???
+  name: "sfbmi.exe"     #bmi???
   #name: "sf+2.68.exe"        #+2.68 elo??????
   protocol: "uci"            # "uci" or "xboard"
   uci_ponder: true           # think on opponent time; only works if "protocol" is "uci"
   polyglot:
-    enabled: false           # activate polyglot book
+    enabled: true           # activate polyglot book
     book:
       standard: # list of book file paths for variant standard
-        #- engines/experience_book.bin
-        - engines/book1.bin
+        #- engines/book1.bin
+        - engines/Cerebellum3Merge.bin
       #atomic: # list of book file paths for variant atomic
        # - engines/atomic.pgn
 #        - engines/atomicbook2.bin
@@ -21,19 +23,19 @@ engine:                      # engine settings
 #      use the same pattern for giveaway, crazyhouse, horde, kingofthehill, racingkings, 3check as well
     min_weight: 0            # does not select moves with weight below min_weight (min 0, max: 65535)
     selection: "weighted_random" # move selection is one of "weighted_random", "uniform_random" or "best_move" (but not below the min_weight in 2. and 3. case)
-    max_depth: 32             # half move max depth(stabiilized one)
-    #max_depth: 64             # half move max depth
+    #max_depth:  32             # half move max depth(stabiilized one)
+    max_depth: 48             # half move max depth
 # engine_options:            # any custom command line params to pass to the engine
 #   cpuct: 3.1
   uci_options:               # arbitrary UCI options passed to the engine
-    Move Overhead: 1800       # increase if your bot flags games too often
+    Move Overhead: 150       # increase if your bot flags games too often
     Threads: 4               # max CPU threads the engine can use
-    Hash: 256                # max memory (in megabytes) the engine can allocate
+    Hash: 256               # max memory (in megabytes) the engine can allocate
     #Use NNUE: true
-    #EvalFile: "nn-62ef826d1a6d.nnue"
-    #SyzygyPath: "engines/3-4-5"
+    #EvalFile: nn-62ef826d1a6d.nnue
+    SyzygyPath: engines/3-4-5
     #Contempt: 30
-    Contempt: 26
+    Contempt: 2
 #   go_commands:             # additional options to pass to the UCI go command
 #     nodes: 1               # Search so many nodes only.
 #     depth: 5               # Search depth ply only.
@@ -50,10 +52,10 @@ engine:                      # engine settings
 
 abort_time: 20               # time to abort a game in seconds when there is no activity
 fake_think_time: false       # artificially slow down the bot to pretend like it's thinking
-move_overhead: 1800          # increase if your bot flags games too often
+move_overhead: 150          # increase if your bot flags games too often
 
 challenge:                   # incoming challenges
-  concurrency: 3             # number of games to play simultaneously
+  concurrency: 1             # number of games to play simultaneously
   sort_by: "best"            # possible values: "best", "first"
   accept_bot: true          # accepts challenges coming from other bots
   only_bot: false            # accept challenges by bots only
